--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
-    "@theqrl/validate-qrl-address": "^1.1.0"
+    "@theqrl/validate-qrl-address": "^1.1.0",
+    "kleur": "^3.0.3"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
