--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "@theqrl/validate-qrl-address": "^1.1.0",
+    "aes256": "^1.0.4",
+    "bech32": "^1.1.3",
     "crypto": "^1.0.1",
     "kleur": "^3.0.3",
+    "ora": "^3.4.0",
     "qrllib": "^1.0.4"
   },
   "devDependencies": {
