Scope npm package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qrl-cli",
+  "name": "@theqrl/cli",
   "description": "QRL CLI functions",
   "version": "0.0.0",
   "author": "JP Lomas @jplomas",
