--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
       - run:
           name: Testing
           command: yarn test
+      - run:
+          name: Upload code coverage to codecov
+          command: ./node_modules/.bin/codecov -t $CODECOV_TOKEN
   node-8:
     <<: *test
     docker:
