--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@oclif/dev-cli": "^1",
     "@oclif/test": "^1",
     "chai": "^4",
+    "codecov": "^3.5.0",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
     "globby": "^10",
