--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,14 @@ jobs:
       - run:
           name: Upload code coverage to codecov
           command: yarn cov
+      - run:
+          name: Build binaries
+          command: yarn run make-binaries
+      - run: cd dist && find . -type f -print0 | xargs -0 shasum -a 256 > ../shasum.256.asc && cd .. && cp shasum.256.asc dist/
+      - run: sudo npm install -g semantic-release
+      - run:
+          name: "Publish Release on GitHub"
+          command: semantic-release
   node-8:
     <<: *test
     docker:
