--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           name: Build binaries
           command: yarn run make-binaries
       - run: cd dist && find . -type f -print0 | xargs -0 shasum -a 256 > ../shasum.256.asc && cd .. && cp shasum.256.asc dist/
-      - run: sudo npm install -g semantic-release
+      - run: npm install semantic-release
       - run:
           name: "Publish Release on GitHub"
           command: semantic-release
