fix: change docker image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   node-latest: &test
     docker:
-      - image: node:latest
+      - image: circleci/node:8.11.2
     working_directory: ~/cli
     steps:
       - checkout
