--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@oclif/plugin-help": "^2",
     "@theqrl/validate-qrl-address": "^1.1.0",
     "aes256": "^1.0.4",
+    "axios": "^0.19.0",
     "bech32": "^1.1.3",
+    "bignumber.js": "^9.0.0",
     "crypto": "^1.0.1",
     "kleur": "^3.0.3",
     "ora": "^3.4.0",
