--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto": "^1.0.1",
     "kleur": "^3.0.3",
     "ora": "^3.4.0",
+    "qrcode-terminal": "^0.12.0",
     "qrllib": "^1.0.4"
   },
   "devDependencies": {
