--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "bugs": "https://github.com/theqrl/qrl-cli/issues",
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.1",
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
@@ -17,10 +18,15 @@
     "bech32": "^1.1.3",
     "bignumber.js": "^9.0.0",
     "crypto": "^1.0.1",
+    "crypto-js": "^3.1.9-1",
+    "grpc": "^1.22.2",
+    "grpc-kit": "^0.2.0",
     "kleur": "^3.0.3",
     "ora": "^3.4.0",
     "qrcode-terminal": "^0.12.0",
-    "qrllib": "^1.0.4"
+    "qrllib": "^1.0.4",
+    "tmp": "^0.1.0",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1",
