--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "grpc": "^1.22.2",
     "grpc-kit": "^0.2.0",
     "kleur": "^3.0.3",
+    "moment": "^2.24.0",
     "ora": "^3.4.0",
     "qrcode-terminal": "^0.12.0",
     "qrllib": "^1.0.4",
