--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.19.0",
     "bech32": "^1.1.3",
     "bignumber.js": "^9.0.0",
+    "cli-ux": "^5.3.1",
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
     "grpc": "^1.22.2",
