--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "prepack": "oclif-dev manifest && oclif-dev readme",
     "test": "nyc mocha --forbid-only -t 50000 \"test/**/*.test.js\"",
     "test-ots": "nyc mocha --forbid-only -t 50000 \"test/commands/ots.test.js\"",
+    "test-send": "nyc mocha --forbid-only -t 50000 \"test/commands/send.test.js\"",
     "version": "oclif-dev readme && git add README.md",
     "cov": "nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov -t $CODECOV_TOKEN",
     "make-binaries": "pkg . -t node8-macos-x64 -o dist/macos/qrl-cli && pkg . -t node8-win-x64 -o dist/win/qrl-cli && pkg . -t node8-linux-x64 -o dist/linux/qrl-cli"
