--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cli-ux": "^5.3.1",
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
+    "eccrypto": "^1.1.2",
     "grpc": "^1.22.2",
     "grpc-kit": "^0.2.0",
     "kleur": "^3.0.3",
