--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "@theqrl/validate-qrl-address": "^1.1.0",
+    "aes-js": "^3.1.2",
     "aes256": "^1.0.4",
     "axios": "^0.19.0",
     "bech32": "^1.1.3",
@@ -27,7 +28,7 @@
     "moment": "^2.24.0",
     "ora": "^3.4.0",
     "qrcode-terminal": "^0.12.0",
-    "qrllib": "^1.1.5",
+    "qrllib": "^1.1.6",
     "tmp": "^0.1.0",
     "util": "^0.12.1"
   },
