--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grpc-kit": "^0.2.0",
     "kleur": "^3.0.3",
     "moment": "^2.24.0",
+    "node": "12.3.1",
     "ora": "^3.4.0",
     "qrcode-terminal": "^0.12.0",
     "qrllib": "^1.1.7",
@@ -78,6 +79,6 @@
     "test-send": "nyc mocha --forbid-only -t 50000 \"test/commands/send.test.js\"",
     "version": "oclif-dev readme && git add README.md",
     "cov": "nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov -t $CODECOV_TOKEN",
-    "make-binaries": "pkg . -t node8-macos-x64 -o dist/macos/qrl-cli && pkg . -t node8-win-x64 -o dist/win/qrl-cli && pkg . -t node8-linux-x64 -o dist/linux/qrl-cli"
+    "make-binaries": "pkg . -t node12-macos-x64 -o dist/macos/qrl-cli && pkg . -t node12-win-x64 -o dist/win/qrl-cli && pkg . -t node12-linux-x64 -o dist/linux/qrl-cli"
   }
 }
