--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
+    "@theqrl/explorer-helpers": "^0.2.5",
     "@theqrl/qrl-proto-sha256": "^2.0.3",
     "@theqrl/validate-qrl-address": "^1.1.0",
     "aes-js": "^3.1.2",
