--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
   "extends": "oclif",
   "rules": {
-    "object-curly-spacing": "off"
+    "object-curly-spacing": "off",
+    "require-atomic-updates": "off",
+    "comma-dangle": "off"
   }
 }
