--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@theqrl/explorer-helpers": "^0.2.5",
     "@theqrl/qrl-proto-sha256": "^2.0.3",
     "@theqrl/validate-qrl-address": "^1.1.0",
+    "acorn": "^7.2.0",
     "aes-js": "^3.1.2",
     "aes256": "^1.0.4",
     "axios": "^0.19.0",
