--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "@theqrl/explorer-helpers": "^2.0.0",
-    "@theqrl/qrl-proto-sha256": "^2.0.3",
+    "@theqrl/qrl-proto-sha256": "^3.2.1",
+    "@theqrl/qrlbase.proto": "^1.1.0",
     "@theqrl/validate-qrl-address": "^1.1.0",
     "acorn": "^7.2.0",
     "aes-js": "^3.1.2",
@@ -25,7 +26,8 @@
     "cli-ux": "^5.3.1",
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
-    "eccrypto": "^1.1.3",
+    "eccrypto": "^1.1.5",
+    "google-proto-files": "^2.3.0",
     "grpc-js-kit": "^0.1.0",
     "kleur": "^3.0.3",
     "moment": "^2.24.0",
@@ -39,10 +41,15 @@
   "devDependencies": {
     "@oclif/dev-cli": "^1",
     "@oclif/test": "^1",
+    "babel-eslint": "^10.1.0",
     "chai": "^4",
     "codecov": "^3.6.5",
-    "eslint": "^5.13",
-    "eslint-config-oclif": "^3.1",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-import": "^0.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-modules": "^1.1.1",
     "globby": "^10",
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
