--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,17 +26,13 @@ jobs:
           name: Build binaries
           command: yarn run make-binaries
       - run: cd dist && find . -type f -print0 | xargs -0 shasum -a 256 > ../shasum.256.asc && cd .. && cp shasum.256.asc dist/
-      - run: sudo npm install -g semantic-release
       - run: zip -r qrl-cli-macos.zip dist/macos
       - run: zip -r qrl-cli-win.zip dist/win
       - run: zip -r qrl-cli-linux.zip dist/linux
       - run:
           name: "Publish Release on GitHub"
-          command: semantic-release
-  node-12:
-    <<: *test
-    docker:
-      - image: node:12
+          command: npx semantic-release
+
   cache:
     <<: *test
     steps:
