--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "globby": "^10",
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
-    "pkg": "^4.4.4"
+    "pkg": "^4.4.9"
   },
   "engines": {
     "node": ">=10.0.0"
@@ -89,6 +89,10 @@
     "test-status": "nyc mocha --forbid-only -t 50000 \"test/commands/status.test.js\"",
     "version": "oclif-dev readme && git add README.md",
     "cov": "nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov -t $CODECOV_TOKEN",
-    "make-binaries": "pkg . -t node10-macos-x64 -o dist/macos/qrl-cli && pkg . -t node10-win-x64 -o dist/win/qrl-cli && pkg . -t node10-linux-x64 -o dist/linux/qrl-cli"
+    "make-binaries": "pkg . -t node10-macos-x64 -o dist/macos/qrl-cli && pkg . -t node10-win-x64 -o dist/win/qrl-cli && pkg . -t node10-linux-x64 -o dist/linux/qrl-cli && cp ./assets/macos/ecdh.node dist/macos && cp ./assets/linux/ecdh.node dist/linux && cp ./assets/win/ecdh.node dist/win"
+  },
+  "pkg": {
+    "scripts": [ "src/**" ],
+    "assets": [ "node_modules/@theqrl/qrlbase.proto/**" ]
   }
 }
