--- a/.releaserc
+++ b/.releaserc
@@ -9,6 +9,7 @@
           "npmPublish": false
         }
       ],
+      "@semantic-release/git",
       [
         "@semantic-release/github",
         {
