--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "bugs": "https://github.com/theqrl/qrl-cli/issues",
   "dependencies": {
-    "@grpc/grpc-js": "^1.2.2",
+    "@grpc/grpc-js": "0.8.1",
     "@grpc/proto-loader": "^0.5.1",
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
-    "@theqrl/explorer-helpers": "^2.4.1",
+    "@theqrl/explorer-helpers": "2.0.0",
     "@theqrl/qrl-proto-sha256": "^3.3.0",
     "@theqrl/qrlbase.proto": "^1.1.0",
     "@theqrl/validate-qrl-address": "^1.1.0",
@@ -25,12 +25,11 @@
     "bignumber.js": "^9.0.0",
     "cli-ux": "^5.3.1",
     "crypto": "^1.0.1",
+    "crypto-js": "3.1.9-1",
     "eccrypto": "^1.1.5",
     "google-proto-files": "^2.3.0",
-    "grpc-js-kit": "^0.1.1",
+    "grpc-js-kit": "^0.1.0",
     "kleur": "^3.0.3",
-    "lodash": "^4.17.20",
-    "mathjs": "^7.6.0",
     "moment": "^2.24.0",
     "node": "10.16.3",
     "ora": "^3.4.0",
