--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "test-send": "nyc mocha --forbid-only -t 50000 \"test/commands/send.test.js\"",
     "test-send-message": "nyc mocha --forbid-only -t 50000 \"test/commands/send-message.test.js\"",
     "test-status": "nyc mocha --forbid-only -t 50000 \"test/commands/status.test.js\"",
-    "test-lattice": "nyc mocha --forbid-only -t 50000 \"test/commands/lattice.test.js\"",
+    "test-generate-lattice-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/generate-lattice-keys.test.js\"",
     "test-get-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/get-keys.test.js\"",
     "version": "oclif-dev readme && git add README.md",
     "cov": "nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov -t $CODECOV_TOKEN",
