search command testing and cleanup script including json output option and check for valid qrl address using helpers

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "test": "nyc mocha --forbid-only -t 50000 \"test/**/*.test.js\"",
     "test-ots": "nyc mocha --forbid-only -t 50000 \"test/commands/ots.test.js\"",
     "test-balance": "nyc mocha --forbid-only -t 50000 \"test/commands/balance.test.js\"",
+    "test-search": "nyc mocha --forbid-only -t 50000 \"test/commands/search.test.js\"",
     "test-send": "nyc mocha --forbid-only -t 50000 \"test/commands/send.test.js\"",
     "test-send-message": "nyc mocha --forbid-only -t 50000 \"test/commands/send-message.test.js\"",
     "test-status": "nyc mocha --forbid-only -t 50000 \"test/commands/status.test.js\"",
