--- a/package.json
+++ b/package.json
@@ -45,12 +45,11 @@
     "babel-eslint": "^10.1.0",
     "chai": "^4",
     "codecov": "^3.6.5",
-    "eslint": "^7.4.0",
-    "eslint-config-airbnb": "^18.2.0",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-import": "^0.13.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-modules": "^1.1.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "globby": "^10",
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
@@ -92,6 +91,7 @@
     "test-send-message": "nyc mocha --forbid-only -t 50000 \"test/commands/send-message.test.js\"",
     "test-status": "nyc mocha --forbid-only -t 50000 \"test/commands/status.test.js\"",
     "test-generate-lattice-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/generate-lattice-keys.test.js\"",
+    "test-generate-shared-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/generate-shared-keys.test.js\"",
     "test-get-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/get-keys.test.js\"",
     "version": "oclif-dev readme && git add README.md",
     "cov": "nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov -t $CODECOV_TOKEN",
