--- a/package.json
+++ b/package.json
@@ -83,16 +83,20 @@
     "posttest": "eslint .",
     "prepack": "oclif-dev manifest && oclif-dev readme",
     "test": "nyc mocha --forbid-only -t 50000 \"test/**/*.test.js\"",
-    "test-ots": "nyc mocha --forbid-only -t 50000 \"test/commands/ots.test.js\"",
-    "test-receive": "nyc mocha --forbid-only -t 50000 \"test/commands/receive.test.js\"",
     "test-balance": "nyc mocha --forbid-only -t 50000 \"test/commands/balance.test.js\"",
-    "test-search": "nyc mocha --forbid-only -t 50000 \"test/commands/search.test.js\"",
-    "test-send": "nyc mocha --forbid-only -t 50000 \"test/commands/send.test.js\"",
-    "test-send-message": "nyc mocha --forbid-only -t 50000 \"test/commands/send-message.test.js\"",
-    "test-status": "nyc mocha --forbid-only -t 50000 \"test/commands/status.test.js\"",
+    "test-create-wallet": "nyc mocha --forbid-only -t 50000 \"test/commands/create-wallet.test.js\"",
     "test-generate-lattice-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/generate-lattice-keys.test.js\"",
     "test-generate-shared-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/generate-shared-keys.test.js\"",
     "test-get-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/get-keys.test.js\"",
+    "test-ots": "nyc mocha --forbid-only -t 50000 \"test/commands/ots.test.js\"",
+    "test-receive": "nyc mocha --forbid-only -t 50000 \"test/commands/receive.test.js\"",
+    "test-notarise": "nyc mocha --forbid-only -t 50000 \"test/commands/notarise.test.js\"",
+    "test-search": "nyc mocha --forbid-only -t 50000 \"test/commands/search.test.js\"",
+    "test-send": "nyc mocha --forbid-only -t 50000 \"test/commands/send.test.js\"",
+    "test-send-message": "nyc mocha --forbid-only -t 50000 \"test/commands/send-message.test.js\"",
+    "test-shared-key-decrypt": "nyc mocha --forbid-only -t 50000 \"test/commands/shared-key-decrypt.test.js\"",
+    "test-shared-key-encrypt": "nyc mocha --forbid-only -t 50000 \"test/commands/shared-key-encrypt.test.js\"",
+    "test-status": "nyc mocha --forbid-only -t 50000 \"test/commands/status.test.js\"",
     "version": "oclif-dev readme && git add README.md",
     "cov": "nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov -t $CODECOV_TOKEN",
     "make-binaries": "pkg . -t node10-macos-x64 -o dist/macos/qrl-cli && pkg . -t node10-win-x64 -o dist/win/qrl-cli && pkg . -t node10-linux-x64 -o dist/linux/qrl-cli && cp ./assets/macos/ecdh.node dist/macos && cp ./assets/linux/ecdh.node dist/linux && cp ./assets/win/ecdh.node dist/win"
