--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "bugs": "https://github.com/theqrl/qrl-cli/issues",
   "dependencies": {
-    "@grpc/grpc-js": "^1.3.7",
+    "@grpc/grpc-js": "0.8.1",
     "@grpc/proto-loader": "^0.5.1",
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "@semantic-release/git": "^9.0.0",
-    "@theqrl/explorer-helpers": "^2.4.1",
+    "@theqrl/explorer-helpers": "2.0.0",
     "@theqrl/qrl-proto-sha256": "^3.3.0",
     "@theqrl/qrlbase.proto": "^1.1.0",
     "@theqrl/validate-qrl-address": "^1.1.0",
@@ -81,9 +81,7 @@
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
     "posttest": "eslint .",
-<<<<<<< HEAD
     "prepack": "oclif-dev manifest && oclif-dev readme",
-
     "test": "nyc mocha --require test/hooks.js --forbid-only -t 50000 \"test/**/*.test.js\"",
     "test-balance": "nyc mocha --forbid-only -t 50000 \"test/commands/balance.test.js\"",
     "test-create-wallet": "nyc mocha --forbid-only -t 50000 \"test/commands/create-wallet.test.js\"",
@@ -100,25 +98,6 @@
     "test-shared-key-encrypt": "nyc mocha --forbid-only -t 50000 \"test/commands/shared-key-encrypt.test.js\"",
     "test-status": "nyc mocha --forbid-only -t 50000 \"test/commands/status.test.js\"",
     "version": "oclif-dev readme && git add README.md",
-=======
-    "prepack": "NODE_OPTIONS='--max-old-space-size=4096' oclif-dev manifest && oclif-dev readme",
-    "test": "nyc mocha --forbid-only -t 50000 \"test/**/*.test.js\"",
-    "test-balance": "nyc mocha --forbid-only -t 50000 \"test/commands/balance.test.js\"",
-    "test-create-wallet": "nyc mocha --forbid-only -t 50000 \"test/commands/create-wallet.test.js\"",
-    "test-generate-lattice-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/generate-lattice-keys.test.js\"",
-    "test-generate-shared-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/generate-shared-keys.test.js\"",
-    "test-get-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/get-keys.test.js\"",
-    "test-ots": "nyc mocha --forbid-only -t 50000 \"test/commands/ots.test.js\"",
-    "test-receive": "nyc mocha --forbid-only -t 50000 \"test/commands/receive.test.js\"",
-    "test-notarise": "nyc mocha --forbid-only -t 50000 \"test/commands/notarise.test.js\"",
-    "test-search": "nyc mocha --forbid-only -t 50000 \"test/commands/search.test.js\"",
-    "test-send": "nyc mocha --forbid-only -t 50000 \"test/commands/send.test.js\"",
-    "test-send-message": "nyc mocha --forbid-only -t 50000 \"test/commands/send-message.test.js\"",
-    "test-shared-key-decrypt": "nyc mocha --forbid-only -t 50000 \"test/commands/shared-key-decrypt.test.js\"",
-    "test-shared-key-encrypt": "nyc mocha --forbid-only -t 50000 \"test/commands/shared-key-encrypt.test.js\"",
-    "test-status": "nyc mocha --forbid-only -t 50000 \"test/commands/status.test.js\"",
-    "version": "NODE_OPTIONS='--max-old-space-size=4096' oclif-dev readme && git add README.md",
->>>>>>> aad82e5d0ca795d32849be297d8d6fd06d3013cf
     "cov": "nyc report --reporter=text-lcov > coverage.lcov && ./node_modules/.bin/codecov -t $CODECOV_TOKEN",
     "make-binaries": "pkg . -t node10-macos-x64 -o dist/macos/qrl-cli && pkg . -t node10-win-x64 -o dist/win/qrl-cli && pkg . -t node10-linux-x64 -o dist/linux/qrl-cli && cp ./assets/macos/ecdh.node dist/macos && cp ./assets/linux/ecdh.node dist/linux && cp ./assets/win/ecdh.node dist/win"
   },
