--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "grpc-js-kit": "^0.1.0",
     "kleur": "^3.0.3",
     "moment": "^2.24.0",
-    "node": "10.16.3",
+    "node": "^12.22.7",
     "ora": "^3.4.0",
     "qrcode-terminal": "^0.12.0",
     "qrllib": "^1.1.7",
