--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "test-get-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/get-keys.test.js\"",
     "test-ots": "nyc mocha --forbid-only -t 50000 \"test/commands/ots.test.js\"",
     "test-receive": "nyc mocha --forbid-only -t 50000 \"test/commands/receive.test.js\"",
-    "test-search": "nyc mocha --forbid-only -t 50000 \"test/commands/search.test.js\"",
+    "test-search": "nyc mocha --require test/hooks.js --forbid-only -t 50000 \"test/commands/search.test.js\"",
     "test-send-message": "nyc mocha --forbid-only -t 50000 \"test/commands/send-message.test.js\"",
     "test-send": "nyc mocha --require test/hooks.js --forbid-only -t 50000 \"test/commands/send.test.js\"",
     "test-status": "nyc mocha --forbid-only -t 50000 \"test/commands/status.test.js\"",
