--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "test-generate-lattice-keys": "nyc mocha --require test/hooks.js --forbid-only -t 50000 \"test/commands/generate-lattice-keys.test.js\"",
     "test-generate-shared-keys": "nyc mocha --require test/hooks.js --forbid-only -t 50000 \"test/commands/generate-shared-keys.test.js\"",
     "test-get-keys": "nyc mocha --forbid-only -t 50000 \"test/commands/get-keys.test.js\"",
+    "test-notarize": "nyc mocha --require test/hooks.js --forbid-only -t 50000 \"test/commands/notarize.test.js\"",
     "test-ots": "nyc mocha --forbid-only -t 50000 \"test/commands/ots.test.js\"",
     "test-receive": "nyc mocha --forbid-only -t 50000 \"test/commands/receive.test.js\"",
     "test-search": "nyc mocha --require test/hooks.js --forbid-only -t 50000 \"test/commands/search.test.js\"",
