--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "bugs": "https://github.com/theqrl/qrl-cli/issues",
   "dependencies": {
-    "@grpc/grpc-js": "0.8.1",
+    "@grpc/grpc-js": "^1.6.7",
     "@grpc/proto-loader": "^0.5.1",
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "@semantic-release/git": "^10.0.1",
-    "@theqrl/explorer-helpers": "2.0.0",
+    "@theqrl/explorer-helpers": "^2.7.0",
     "@theqrl/qrl-proto-sha256": "^3.4.1",
     "@theqrl/qrlbase.proto": "^1.1.0",
     "@theqrl/validate-qrl-address": "^1.1.0",
@@ -56,7 +56,7 @@
     "pkg": "^4.4.9"
   },
   "engines": {
-    "node": ">=10.0.0"
+    "node": ">=16.0.0"
   },
   "files": [
     "/bin",
